--- a/variable_input/variableinput.ui
+++ b/variable_input/variableinput.ui
@@ -37,6 +37,9 @@
      <property name="focusPolicy">
       <enum>Qt::WheelFocus</enum>
      </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
