GUI framework now independent of vInequalityInput.\n can now plot and combine from different widgets. dependent on 'accessibleDescription' to determine what widget it is dealing with. cannot yet plot InequalityLoaders.

--- a/bareminimumplotter.ui
+++ b/bareminimumplotter.ui
@@ -78,6 +78,19 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="pushButton_AddInequalityLoader">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>&amp;Load Inequality </string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer_5">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
